code cleanup/reorder

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <div class="container-fluid" >
           <a class="navbar-brand">
           <div>
-              <img src = "logo.jpg" alt = "logo" id="logo"></div></a>
+              <img src = "./assets/images/logo.jpg" alt = "logo" id="logo"></div></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,9 +45,6 @@
                 <a class="nav-link" href="#">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="#">Reviews</a>
               </li>
               <li class="nav-item">
@@ -58,6 +55,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign Up</a>
               </li>
             </ul>
           </div>
