--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
-    <link rel='icon' href='logo.jpg'>
+    <link rel='icon' href='../../assets/images/logo.jpg'>
 
 
     <!-- Bootstrap CSS -->
