sessions and login/signup finished

--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
-    <link rel='icon' href='../../assets/images/logo.jpg'>
+    <link rel='icon' href='./assets/images/logo.jpg'>
 
 
     <!-- Bootstrap CSS -->
@@ -26,7 +26,7 @@
         <div class="container-fluid" >
           <a class="navbar-brand">
           <div>
-              <img src = "logo.jpg" alt = "logo" id="logo"></div></a>
+          <img src = "./assets/images/logo.jpg" alt = "logo" id="logo"></div></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
