--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
                 <a class="nav-link" href="#">Types of Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="./login.php">Login</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/signUpPage/signUpPage.php">Sign Up</a>
