--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
-    <link rel='icon' href='logo.jpg'>
+    <link rel='icon' href='./assets/images/logo.jpg'>
 
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!-- Link style.css file -->
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="header.css">
 
 
     <!-- Google Font-->
@@ -26,7 +26,7 @@
         <div class="container-fluid" >
           <a class="navbar-brand">
           <div>
-              <img src = "./assets/images/logo.jpg" alt = "logo" id="logo"></div></a>
+          <img src = "./assets/images/logo.jpg" alt = "logo" id="logo"></div></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,6 +45,9 @@
                 <a class="nav-link" href="#">Contact Us</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#">Sign Up</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Reviews</a>
               </li>
               <li class="nav-item">
@@ -54,30 +57,13 @@
                 <a class="nav-link" href="#">Types of Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./login.php">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/signUpPage/signUpPage.php">Sign Up</a>
+                <a class="nav-link" href="#">Login</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
   <br>
-  <h1>Plan For Smart Services</h1>
-  <h2>Please Select an Option</h2>
-<div class=btnOpts>
-  <button class="optionA"> Ride to a Destination</button>
-  <button class="optionB"> Ride & Deliver</button>
-</div>
-<br>
 
-<footer>
-    <nav class="navbar fixed-bottom navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
-        </div>
-      </nav>
-</footer>
   </body>
 </html>
