--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <div class="container-fluid" >
           <a class="navbar-brand">
           <div>
-              <img src = "./assets/images/logo.jpg" alt = "logo" id="logo"></div></a>
+              <img src = "./assets//images/logo.png" alt = "logo" id="logo"></div></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
