--- a/pages/header/skeleton.html
+++ b/pages/header/skeleton.html
@@ -36,31 +36,37 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="../../main.php">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">System Logo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="../aboutUsPage/aboutUsPage.php">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="../contactUsPage/contactUs.php">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="../signUpPage/signUpPage.php">Sign Up</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shopping Cart</a>
+                <a class="nav-link" href="../shoppingCart/shoppingcart.php">Shopping Cart</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Types of Services
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="../servicePage/servicepage_a.php">Car Ride Service</a>
+                  <a class="dropdown-item" href="../servicePage/servicepage_b.php">Ride and Deliver</a>
+                </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Types of Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="../../login.php">Login</a>
               </li>
             </ul>
           </div>
